[Studio] Deps for log4j

--- a/vertigo-studio/pom.xml
+++ b/vertigo-studio/pom.xml
@@ -16,6 +16,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>io.vertigo</groupId>
+			<artifactId>vertigo-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-dynamo-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
