[Dynamo] Exclude log4j from ES to avoid conflict

--- a/vertigo-dynamo-impl/pom.xml
+++ b/vertigo-dynamo-impl/pom.xml
@@ -90,7 +90,13 @@
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
 			<version>7.4.1</version>
-			<optional>true</optional> <!-- EsTransportSearchServicesPlugin -->			
+			<optional>true</optional> <!-- EsTransportSearchServicesPlugin -->
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.logging.log4j</groupId>
+					<artifactId>log4j-api</artifactId>
+				</exclusion>
+			</exclusions>			
 		</dependency>
 		<dependency>
 		    <groupId>org.elasticsearch.client</groupId>
