--- a/vertigo-database-impl/pom.xml
+++ b/vertigo-database-impl/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo</artifactId>
-		<version>2.1.0-SNAPSHOT</version>
+		<version>2.1.0</version>
 	</parent>
 
 	<artifactId>vertigo-database-impl</artifactId>
