--- a/vertigo-dynamo-plugin-elasticsearch_5_6/pom.xml
+++ b/vertigo-dynamo-plugin-elasticsearch_5_6/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo</artifactId>
-		<version>2.1.0</version>
+		<version>3.0.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>vertigo-dynamo-plugin-elasticsearch_5_6</artifactId>
