--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -196,7 +196,7 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.1.1</version>
 				<configuration>
-					<additionalparam>-Xdoclint:none</additionalparam>
+					<doclint>none</doclint>
 				</configuration>
 			</plugin>
 			<plugin>
