--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
-		<version>3.0.0-SNAPSHOT</version>
+		<version>2.1.0</version>
 		<relativePath>./vertigo-parent</relativePath>
 	</parent>
 
