--- a/vertigo-vega-api/pom.xml
+++ b/vertigo-vega-api/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo</artifactId>
-		<version>2.1.0</version>
+		<version>2.1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>vertigo-vega-api</artifactId>
