--- a/vertigo-core/pom.xml
+++ b/vertigo-core/pom.xml
@@ -50,6 +50,11 @@
 			<artifactId>snakeyaml</artifactId>
 			<version>1.25</version>  <!-- yaml config -->
 		</dependency>
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.22.0-GA</version>
+		</dependency>
 	</dependencies>
 
 </project>
