--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,6 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build and analyze
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn clean source:jar org.jacoco:jacoco-maven-plugin:prepare-agent install org.sonarsource.scanner.maven:sonar-maven-plugin:3.9.1.2184:sonar -Dsonar.projectKey=vertigo-io_vertigo -Dsonar.organization=vertigo-io -Dsonar.host.url=https://sonarcloud.io
