--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -64,8 +64,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<vertigo.version>4.0.0-SNAPSHOT</vertigo.version>
 		<!-- For global junit test coverage -->
-		<jacoco.destFile>${project.basedir}/../target/jacoco-it.exec</jacoco.destFile>
-		<sonar.jacoco.reportPaths>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.reportPaths>
+		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../target/jacoco-it.xml</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 
 	<dependencies>
