test github packages

--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -272,6 +272,16 @@
 			</build>
 		</profile>
 		<profile>
+			<id>Github</id>
+			<distributionManagement>
+				<repository>
+					<id>github</id>
+					<name>GitHub Vertigo-io Apache Maven Packages</name>
+					<url>https://maven.pkg.github.com/vertigo-io/vertigo</url>
+				</repository>
+			</distributionManagement>
+		</profile>
+		<profile>
 			<id>KleeRepo</id>
 			<distributionManagement>
 				<repository>
