--- a/vertigo-core/pom.xml
+++ b/vertigo-core/pom.xml
@@ -51,5 +51,18 @@
 			<version>3.28.0-GA</version>
 		</dependency>
 	</dependencies>
+	
+	<profiles>
+		<profile>
+			<id>Github</id>
+			<distributionManagement>
+				<repository>
+					<id>github</id>
+					<name>GitHub Vertigo-io Apache Maven Packages</name>
+					<url>https://maven.pkg.github.com/vertigo-io/vertigo</url>
+				</repository>
+			</distributionManagement>
+		</profile>
+	</profiles>
 
 </project>
