--- a/.github/workflows/sonar-tag.yml
+++ b/.github/workflows/sonar-tag.yml
@@ -1,8 +1,9 @@
-name: Build
+name: SonarCloud Vertigo version
 on:
-  push:
-    branches:
-      - develop
+  workflow_dispatch:
+    inputs: 
+      version-tag: 
+        required: true
 jobs:
   build:
     name: Build
@@ -16,25 +17,25 @@ jobs:
               DOCKER_INFLUXDB_INIT_PASSWORD: vertigo-password
               DOCKER_INFLUXDB_INIT_ORG: vertigo
               DOCKER_INFLUXDB_INIT_BUCKET: myApp
-              DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: is4DQpHF8XkvNJRm5KNJOtjlKIpfVc2G
+              DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: rytuvFE1f5JR4CPD1cOfr-74W2rL7tu1by-6DnO6zbTxMQy6foj7qtBMYSkFGT15Y1vjJCr5OP01Uci_ZdIlIA==
             ports:
               - 8086:8086
         analytics:
             image: vertigoio/vertigo-analytics-server
             env:
               INFLUXDB_URL: http://influxdb:8086
-              INFLUXDB_TOKEN: is4DQpHF8XkvNJRm5KNJOtjlKIpfVc2G
+              INFLUXDB_TOKEN: rytuvFE1f5JR4CPD1cOfr-74W2rL7tu1by-6DnO6zbTxMQy6foj7qtBMYSkFGT15Y1vjJCr5OP01Uci_ZdIlIA==
             ports:
               - 4562:4562
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-          ref: develop
+          ref: ${{ github.event.inputs.version-tag }}
       - name: Set up JDK 16
         uses: actions/setup-java@v1
         with:
-          java-version: 16
+          java-version: 11
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
@@ -54,4 +55,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn clean source:jar org.jacoco:jacoco-maven-plugin:prepare-agent deploy org.jacoco:jacoco-maven-plugin:report org.sonarsource.scanner.maven:sonar-maven-plugin:3.9.1.2184:sonar -Dsonar.projectKey=vertigo-io_vertigo -Dsonar.organization=vertigo-io -Dsonar.host.url=https://sonarcloud.io -P Github
+        run: mvn clean source:jar org.jacoco:jacoco-maven-plugin:prepare-agent package org.jacoco:jacoco-maven-plugin:report org.sonarsource.scanner.maven:sonar-maven-plugin:3.9.1.2184:sonar -Dsonar.projectKey=vertigo-io_vertigo -Dsonar.organization=vertigo-io -Dsonar.host.url=https://sonarcloud.io -Dsonar.branch.name="master" -Djacoco.destFile="\${project.build.directory}/jacoco.exec" -Dsonar.jacoco.reportPath=
