--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -48,6 +48,9 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
+      - name: Update hosts
+        run: |
+          echo "127.0.0.1 analytica.part.klee.lan.net" | sudo tee -a /etc/hosts
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
