--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>io.vertigo</groupId>
 	<artifactId>vertigo-parent</artifactId>
-	<version>4.0.0-SNAPSHOT</version>
+	<version>3.4.0</version>
 	<packaging>pom</packaging>
 	<name>vertigo-parent</name>
 	<description>Vertigo is a simple java project starter</description>
