--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -162,6 +162,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<version>3.0.1</version>
+				<configuration>
+					<releaseProfiles>release</releaseProfiles>
+				</configuration>
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.maven.scm</groupId>
