--- a/vertigo-core/pom.xml
+++ b/vertigo-core/pom.xml
@@ -26,6 +26,12 @@
 		    <version>2.20.0</version> <!-- To avoid conflict of version, we must exclude log4j-core version when necessary -->
 		</dependency>
 		<dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-layout-template-json</artifactId>
+            <version>2.20.0</version><!-- To avoid conflict of version, we must exclude log4j-core version when necessary -->
+        </dependency>
+
+		<dependency>
 			<groupId>javax.inject</groupId>
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
@@ -50,6 +56,7 @@
 			<artifactId>javassist</artifactId>
 			<version>3.29.2-GA</version>
 		</dependency>
+
 	</dependencies>
 	
 
