--- a/vertigo-core/pom.xml
+++ b/vertigo-core/pom.xml
@@ -18,13 +18,19 @@
 		<dependency>
 		    <groupId>org.apache.logging.log4j</groupId>
 		    <artifactId>log4j-api</artifactId>
-		    <version>2.20.0</version> <!-- To avoid conflict of version, we must exclude log4j-api version when necessary -->
+		    <version>2.21.1</version> <!-- To avoid conflict of version, we must exclude log4j-api version when necessary -->
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.logging.log4j</groupId>
 		    <artifactId>log4j-core</artifactId>
-		    <version>2.20.0</version> <!-- To avoid conflict of version, we must exclude log4j-core version when necessary -->
+		    <version>2.21.1</version> <!-- To avoid conflict of version, we must exclude log4j-core version when necessary -->
 		</dependency>
+		<dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-layout-template-json</artifactId>
+            <version>2.21.1</version><!-- To avoid conflict of version, we must exclude log4j-core version when necessary -->
+        </dependency>
+
 		<dependency>
 			<groupId>javax.inject</groupId>
 			<artifactId>javax.inject</artifactId>
@@ -43,13 +49,14 @@
 		<dependency>
 			<groupId>org.yaml</groupId>
 			<artifactId>snakeyaml</artifactId>
-			<version>2.0</version>  <!-- yaml config -->
+			<version>2.2</version>  <!-- yaml config -->
 		</dependency>
 		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
 			<version>3.29.2-GA</version>
 		</dependency>
+
 	</dependencies>
 	
 
