update scm info

--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
 	</modules>
 
 	<scm>
-		<connection>scm:git:https://github.com/vertigo-io/vertigo.git</connection>
-		<developerConnection>scm:git:https://github.com/vertigo-io/vertigo.git</developerConnection>
-		<url>scm:git:https://github.com/vertigo-io/vertigo.git</url>
+		<connection>scm:git:https://github.com/vertigo-io/vertigo-core.git</connection>
+		<developerConnection>scm:git:https://github.com/vertigo-io/vertigo-core.git</developerConnection>
+		<url>scm:git:https://github.com/vertigo-io/vertigo-core.git</url>
 		<tag>vertigo-3.5.0</tag>
 	</scm>
 	
