--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -37,9 +37,9 @@
 	</developers>
 
 	<scm>
-		<connection>scm:git:https://github.com/vertigo-io/vertigo.git</connection>
-		<developerConnection>scm:git:https://github.com/vertigo-io/vertigo.git</developerConnection>
-		<url>scm:git:https://github.com/vertigo-io/vertigo.git</url>
+		<connection>scm:git:https://github.com/vertigo-io/vertigo-core.git</connection>
+		<developerConnection>scm:git:https://github.com/vertigo-io/vertigo-core.git</developerConnection>
+		<url>scm:git:https://github.com/vertigo-io/vertigo-core.git</url>
 		<tag>vertigo-4.2.0</tag>
 	</scm>
 
@@ -278,7 +278,7 @@
 				<snapshotRepository>
 					<id>github</id>
 					<name>GitHub Vertigo-io Apache Maven Packages</name>
-					<url>https://maven.pkg.github.com/vertigo-io/vertigo</url>
+					<url>https://maven.pkg.github.com/vertigo-io/vertigo-core</url>
 				</snapshotRepository>
 			</distributionManagement>
 		</profile>
