pom switch to dependencyManagement

--- a/vertigo-core/pom.xml
+++ b/vertigo-core/pom.xml
@@ -13,9 +13,10 @@
 	<name>vertigo-core</name>
 	<description>Vertigo is a simple java starter</description>
 	<url>http://vertigo.io</url>
-
-	<dependencies>
-		<dependency>
+	
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
 		    <groupId>org.apache.logging.log4j</groupId>
 		    <artifactId>log4j-api</artifactId>
 		    <version>2.21.1</version> <!-- To avoid conflict of version, we must exclude log4j-api version when necessary -->
@@ -56,8 +57,47 @@
 			<artifactId>javassist</artifactId>
 			<version>3.29.2-GA</version>
 		</dependency>
+		</dependencies>
+	</dependencyManagement>
 
+	<dependencies>
+		<!-- components-->
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+		</dependency>
+		<!-- discovery -->
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+		</dependency> 
+		<!-- Amplifier & aspects -->
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+		</dependency>
+		<!-- yaml config-->
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+		</dependency>
+		<!-- logging -->
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-api</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-core</artifactId>
+		</dependency>
+		<dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-layout-template-json</artifactId>
+        </dependency>
+		<!-- json -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency> 
 	</dependencies>
-	
-
 </project>
