--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -196,6 +196,26 @@
 	</build>
 	<profiles>
 		<profile>
+			<id>release-snapshot</id>
+			<build>
+				<plugins>
+					<plugin><!--Config pour déployer les sources -->
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>3.3.0</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
 			<id>release</id>
 			<activation>
 				<property>
