[Core] Update libs
junit 5.10.0 -> 5.10.3
log4j 2.21.1 -> 2.23.1
gson 2.10.1 -> 2.11.0
javassist 3.29.2 -> 3.30.2

--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -32,7 +32,12 @@
 		<developer>
 			<id>mlaroche</id>
 			<name>Matthieu Laroche</name>
-			<email>matthieu dot laroche at kleegroup dot com</email>
+			<email>matthieu dot laroche at ovomnia dot io</email>
+		</developer>
+		<developer>
+			<id>skerdudou</id>
+			<name>Steven Kerdudou</name>
+			<email>steven dot kerdudou at kleegroup dot com</email>
 		</developer>
 	</developers>
 
@@ -64,13 +69,13 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.10.0</version>
+			<version>5.10.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.10.0</version>
+			<version>5.10.3</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
