--- a/vertigo-core/pom.xml
+++ b/vertigo-core/pom.xml
@@ -27,6 +27,11 @@
 		    <version>2.23.1</version> <!-- To avoid conflict of version, we must exclude log4j-core version when necessary -->
 		</dependency>
 		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-slf4j2-impl</artifactId>
+		    <version>2.23.1</version> <!-- To avoid conflict of version, we must exclude log4j-core version when necessary -->
+		</dependency>
+		<dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-layout-template-json</artifactId>
             <version>2.23.1</version><!-- To avoid conflict of version, we must exclude log4j-core version when necessary -->
