--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -52,7 +52,7 @@
 		<repository>
 			<id>ossrh</id>
 			<name>OSSRH Releases</name>
-			<url>https://oss.sonatype.org.nope/service/local/staging/deploy/maven2/</url>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
 		<!-- snapshotRepository> <id>ossrh</id> <name>OSSRH Snapshot</name> <url>https://oss.sonatype.org/content/repositories/snapshots/</url> 
 			</snapshotRepository -->
