--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>io.vertigo</groupId>
 	<artifactId>vertigo-parent</artifactId>
-	<version>4.3.0-SNAPSHOT</version>
+	<version>4.3.0</version>
 	<packaging>pom</packaging>
 	<name>vertigo-parent</name>
 	<description>Vertigo is a simple java project starter</description>
@@ -45,7 +45,7 @@
 		<connection>scm:git:https://github.com/vertigo-io/vertigo-core.git</connection>
 		<developerConnection>scm:git:https://github.com/vertigo-io/vertigo-core.git</developerConnection>
 		<url>scm:git:https://github.com/vertigo-io/vertigo-core.git</url>
-		<tag>vertigo-4.2.0</tag>
+		<tag>vertigo-4.3.0</tag>
 	</scm>
 
 	<distributionManagement>
