--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
-		<version>4.3.0</version>
+		<version>5.0.0-SNAPSHOT</version>
 		<relativePath>./vertigo-parent</relativePath>
 	</parent>
 
@@ -30,7 +30,7 @@
 		<connection>scm:git:https://github.com/vertigo-io/vertigo-core.git</connection>
 		<developerConnection>scm:git:https://github.com/vertigo-io/vertigo-core.git</developerConnection>
 		<url>scm:git:https://github.com/vertigo-io/vertigo-core.git</url>
-		<tag>vertigo-4.3.0</tag>
+		<tag>vertigo-3.5.0</tag>
 	</scm>
 	
 </project>
